# Digital_Geometry

./: .qglviewer.xml  CMakeLists.txt  README.md  TEST.cpp  TP1-2.cpp  TP3.cpp  TP3.cpp.txt  greedy-dss-decomposition.eps  greedy-dss-decomposition2.eps  helloworld.cpp  main.cpp  rapport.md  svgreader.py
